@@ -1,0 +1,101 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ *
+ * Copyright 2010 Sun Microsystems, Inc. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License. You can obtain
+ * a copy of the License at https://glassfish.dev.java.net/public/CDDL+GPL.html
+ * or glassfish/bootstrap/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at glassfish/bootstrap/legal/LICENSE.txt.
+ * Sun designates this particular file as subject to the "Classpath" exception
+ * as provided by Sun in the GPL Version 2 section of the License file that
+ * accompanied this code.  If applicable, add the following below the License
+ * Header, with the fields enclosed by brackets [] replaced by your own
+ * identifying information: "Portions Copyrighted [year]
+ * [name of copyright owner]"
+ *
+ * Contributor(s):
+ *
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+
+package javax.mail.internet;
+
+import java.io.OutputStream;
+import java.io.StringBufferInputStream;
+import java.util.Properties;
+
+import javax.mail.Session;
+import javax.mail.MessagingException;
+import javax.mail.BodyPart;
+import javax.mail.internet.MimeMessage;
+import javax.mail.internet.MimeMultipart;
+
+import org.junit.*;
+import static org.junit.Assert.assertEquals;
+
+/**
+ * Test "mail.mime.allowencodedmessages" System property.
+ */
+public class AllowEncodedMessages {
+ 
+    private static Session s = Session.getInstance(new Properties());
+
+    @BeforeClass
+    public static void before() {
+	System.out.println("AllowEncodedMessages");
+	System.setProperty("mail.mime.allowencodedmessages", "true");
+    }
+
+    @Test
+    public void testEncodedMessages() throws Exception {
+        MimeMessage m = createMessage();
+	MimeMultipart mp = (MimeMultipart)m.getContent();
+	BodyPart bp = mp.getBodyPart(0);
+	assertEquals("message/rfc822", bp.getContentType());
+
+	MimeMessage m2 = (MimeMessage)bp.getContent();
+	assertEquals("text/plain", m2.getContentType());
+	assertEquals("test message\r\n", m2.getContent());
+    }
+
+    @AfterClass
+    public static void after() {
+	// should be unnecessary
+	System.clearProperty("mail.mime.allowencodedmessages");
+    }
+
+    private static MimeMessage createMessage() throws MessagingException {
+        String content =
+	    "Mime-Version: 1.0\n" +
+	    "Subject: Example\n" +
+	    "Content-Type: multipart/mixed; boundary=\"-\"\n" +
+	    "\n" +
+	    "---\n" +
+	    "Content-Type: message/rfc822\n" +
+	    "Content-Transfer-Encoding: base64\n" +
+	    "\n" +
+	    "TWltZS1WZXJzaW9uOiAxLjANClN1YmplY3Q6IH" +
+	    "Rlc3QNCkNvbnRlbnQtVHlwZTogdGV4dC9wbGFp\n" +
+	    "bg0KDQp0ZXN0IG1lc3NhZ2UNCg==\n" +
+	    "\n" +
+	    "-----\n";
+
+	return new MimeMessage(s, new StringBufferInputStream(content));
+    }
+}
